// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductList /> renders properly 'load more' button 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_ZoF6Xi8-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Lewis PLC
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_07Fa6v8-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Kennedy-Ramirez
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_zeczDly-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Newman, Ashley and Roberson
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_VX2ikxl-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Jacobson, Stewart and Rodriguez
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_wl4FUo7-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Sloan Ltd
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_c0nSiAe-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Foster-Beard
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_qHI83dZ-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Henson PLC
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_06TblXK-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Novak, Lopez and Cook
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_yMYqzTc-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Thompson-Jones
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_eWtYYcz-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Cunningham, Torres and Day
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <div
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    onBlur={[Function]}
    onClick={[MockFunction]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17 MuiAvatar-colorDefault-18"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-20"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Load more
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </div>
</ul>
`;

exports[`<ProductList /> renders properly when data is loaded 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_ZoF6Xi8-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Lewis PLC
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_07Fa6v8-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Kennedy-Ramirez
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_zeczDly-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Newman, Ashley and Roberson
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_VX2ikxl-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Jacobson, Stewart and Rodriguez
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_wl4FUo7-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Sloan Ltd
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_c0nSiAe-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Foster-Beard
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_qHI83dZ-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Henson PLC
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_06TblXK-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Novak, Lopez and Cook
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/6_yMYqzTc-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Thompson-Jones
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
  <a
    className="MuiButtonBase-root-57 MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12 MuiListItem-button-13"
    href="#"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root-17"
    >
      <img
        alt={undefined}
        className="MuiAvatar-img-19"
        sizes={undefined}
        src="/media/__sized__/products/saleor/static/placeholders/t-shirts/5_eWtYYcz-crop-c0-5__0-5-255x255-70.jpg"
        srcSet={undefined}
      />
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        Cunningham, Torres and Day
      </h3>
    </div>
    <span
      className="MuiTouchRipple-root-60"
    />
  </a>
</ul>
`;

exports[`<ProductList /> renders properly when product list is empty 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <li
    className="MuiListSubheader-root-67 MuiListSubheader-sticky-71"
  >
    No products found
  </li>
</ul>
`;

exports[`<ProductList /> renders while data is loading 1`] = `
<ul
  className="MuiList-root-1 MuiList-padding-2"
>
  <li
    className="MuiListItem-root-5 MuiListItem-dense-9 MuiListItem-gutters-12"
    disabled={false}
  >
    <div
      className="MuiAvatar-root-17 MuiAvatar-colorDefault-18"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-20"
        color={undefined}
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
        />
      </svg>
    </div>
    <div
      className="MuiListItemText-root-26"
    >
      <h3
        className="MuiTypography-root-32 MuiTypography-subheading-39 MuiListItemText-primary-29"
      >
        <span
          className="Component-skeleton-56"
          style={undefined}
        >
          ‌
        </span>
      </h3>
    </div>
  </li>
</ul>
`;
